--- a/app/assets/stylesheets/class_posts.scss
+++ b/app/assets/stylesheets/class_posts.scss
@@ -137,27 +137,18 @@
 
 	p {
 		margin: 10px 20px;
-	}
-
-	// 見出しp
-	.class_posts_show_p {
-		text-align: left;
-	}
-
-	// データ取得
-	.class_posts_show_data {
 		text-align: left;
 	}
 
 	// 内容大きさ
 	.class_posts_show_content {
-		height: 100px;
 		text-align: left;
 	}
 	// 内容・画像
 	.class_posts_show_border_p {
 		border-bottom: solid 3px #fce38a;
 		padding-bottom: 5px;
+		text-align: center;
 	}
 
 	img {
