--- a/app/views/change_posts/_form.html.erb
+++ b/app/views/change_posts/_form.html.erb
@@ -11,8 +11,8 @@
     </div>
   <% end %>
   <div id="change_children" class="change_flex">
-    <%= form.label :children_name, "お子様の名前:", class: :change_label %>
-    <%= form.text_field :children_name %>
+    <%= form.label :change_children_name, "お子様の名前:", class: :change_label %>
+    <%= form.text_field :change_children_name %>
   </div>
   <div id="change_items" class="change_flex">
     <%= form.label :change_item, "変更項目:", class: :change_label %>
