--- a/app/assets/stylesheets/parent_forms.scss
+++ b/app/assets/stylesheets/parent_forms.scss
@@ -128,13 +128,16 @@
 		.parent_form_show_content_p {
 			border-bottom: solid 3px #fce38a;
 			padding-bottom: 5px;
+			text-align: center;
+		}
+
+		p {
+			text-align: left;
 		}
 		// 内容大きさ
 		.parent_form_show_content {
 			width: 100%;
-			height: 100px;
 			margin-top: 5px;
-			text-align: left;
 		}
 	}
 }
