--- a/app/views/class_posts/show.html.erb
+++ b/app/views/class_posts/show.html.erb
@@ -4,7 +4,7 @@
   <p class="class_posts_show_border_p">タイトル: <%= @class_post.title %></p>
   <div>
     <p class="class_posts_show_border_p">内容</p>
-    <p class="class_posts_show_content"><%= @class_post.content %></p>
+    <p class="class_posts_show_content"><%= simple_format(@class_post.content) %></p>
   </div>
   <div>
     <p class="class_posts_show_border_p">画像</p>
