--- a/app/assets/stylesheets/min_600.scss
+++ b/app/assets/stylesheets/min_600.scss
@@ -124,4 +124,36 @@
 			width: 165px;
 		}
 	}
+
+	// ----------------------------------------------------------------
+	//      class_posts   show
+	// -----------------------------------------------------------------
+
+	// 画像を横並び
+	#class_posts_show_images {
+		// ボタンの矢印サイズ
+		.slick-prev:before,
+		.slick-next:before {
+			font-size: 25px;
+		}
+	}
+
+	// ----------------------------------------------------------------
+	//      class_posts   show
+	// -----------------------------------------------------------------
+
+	// 画像の大きさ
+	.incorporates_show_images {
+		width: 80%;
+		margin: 0 auto;
+	}
+
+	// ----------------------------------------------------------------
+	//      parent_information show
+	// -----------------------------------------------------------------
+
+	// 画像の大きさ
+	#parent_information_show_content_image {
+		width: 80%;
+	}
 }
