--- a/app/assets/stylesheets/parent_informations.scss
+++ b/app/assets/stylesheets/parent_informations.scss
@@ -92,7 +92,7 @@
 	// 項目div
 	.parent_information_show_div {
 		display: flex;
-		margin: 10px;
+		margin: 10px 0;
 		// 項目p
 		.parent_information_show_p {
 			text-align: left;
@@ -109,12 +109,13 @@
 	.parent_information_show_content_p {
 		border-bottom: solid 3px #fce38a;
 		padding-bottom: 5px;
-		margin: 20px 10px;
+		margin: 20px 0;
+		text-align: center;
 	}
 	// 内容のサイズ
-	.parent_information_show_content {
-		width: 100%;
-		height: 150px;
+	p {
+		text-align: left;
+		line-height: initial;
 	}
 
 	// ファイル・画像サイズ
@@ -122,6 +123,9 @@
 		img {
 			width: 100%;
 			height: auto;
+		}
+		#parent_information_show_content_image {
+			margin: 0 auto;
 		}
 	}
 }
