--- a/app/views/daily_records/index.html.erb
+++ b/app/views/daily_records/index.html.erb
@@ -1,6 +1,6 @@
 <div id="daily_record_index_body">
   <div class="parent_links">
-    <%= link_to "保護者システム", new_daily_record_path ,id: :parent_tops_system %>
+    <%= link_to "保育者システム", new_daily_record_path ,id: :parent_tops_system %>
   </div>
   <h1>連絡ノート一覧</h1>
   <div id="daily_record_index">
