webkit独自の装飾を不要にする為

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,11 @@ body {
 	color: #333333;
 }
 
+/* webkit独自の装飾を不要にする為 */
+* {
+	-webkit-appearance: none;
+}
+
 // ------------------------ h1装飾 -------------------------------------
 h1 {
 	text-align: center;
