--- a/app/assets/stylesheets/stampings.scss
+++ b/app/assets/stylesheets/stampings.scss
@@ -127,6 +127,8 @@
 		border: solid 3px #fdd955;
 		border-radius: 5px;
 		color: #333333;
+		-webkit-text-fill-color: #333;
+		-webkit-appearance: none;
 	}
 }
 
