スマホやiosで勝手につくcssを反映させない
appearance: none;　追加

--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -32,6 +32,19 @@
 			margin: 10px 0px;
 		}
 	}
+
+	// 送信ボタン
+	#change_actions {
+		#change_action {
+			margin: 10px 0px;
+			font-weight: bold;
+			width: 100%;
+			background-color: #fce38a;
+			border: solid 3px #fdd955;
+			border-radius: 5px;
+			appearance: none;
+		}
+	}
 }
 
 // ------------------------------------------------------
