--- a/app/assets/stylesheets/class_posts.scss
+++ b/app/assets/stylesheets/class_posts.scss
@@ -112,8 +112,9 @@
 			font-weight: bold;
 			width: 100%;
 			background-color: #08d9d6;
-			border: solid 3px #08d9d6;
+			border: solid 3px #069997;
 			border-radius: 5px;
+			appearance: none;
 		}
 	}
 }
