--- a/app/assets/stylesheets/daily_records.scss
+++ b/app/assets/stylesheets/daily_records.scss
@@ -349,6 +349,7 @@
 	background-color: #08d9d6;
 	border: solid 3px #069997;
 	border-radius: 5px;
+	appearance: none;
 }
 
 // --------------------------------------------------------
