--- a/app/assets/stylesheets/parent_informations.scss
+++ b/app/assets/stylesheets/parent_informations.scss
@@ -54,6 +54,7 @@
 	background-color: #08d9d6;
 	border: solid 3px #0aa09d;
 	border-radius: 5px;
+	appearance: none;
 }
 
 // ----------------------------------------------------------------
