--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -180,5 +180,15 @@
 			height: 100px;
 		}
 	}
-	//----------------------------
+	#calendar_submit {
+		input {
+			margin: 10px 0px;
+			font-weight: bold;
+			width: 100%;
+			background-color: #08d9d6;
+			border: solid 3px #069997;
+			border-radius: 5px;
+			appearance: none;
+		}
+	}
 }
