--- a/app/assets/stylesheets/incorporates.scss
+++ b/app/assets/stylesheets/incorporates.scss
@@ -58,8 +58,9 @@
 		font-weight: bold;
 		width: 100%;
 		background-color: #08d9d6;
-		border: solid 3px #09a19f;
+		border: solid 3px #069997;
 		border-radius: 5px;
+		appearance: none;
 	}
 }
 
