--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,8 @@ h1 {
 }
 
 // ------------------ フッターリンク ---------------------
-footer a {
-	text-decoration: none;
+#footer_links {
+	a {
+		text-decoration: none;
+	}
 }
