--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,4 +47,10 @@ footer {
 	a {
 		text-decoration: none;
 	}
+	a:hover {
+		text-decoration: none;
+	}
+	a:visited {
+		text-decoration: none;
+	}
 }
