スマホでの下線が消えない
-webkitを入れて実行

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,11 +46,14 @@ h1 {
 footer {
 	a {
 		text-decoration: none;
+		-webkit-text-decoration: none;
 	}
 	a:hover {
 		text-decoration: none;
+		-webkit-text-decoration: none;
 	}
 	a:visited {
 		text-decoration: none;
+		-webkit-text-decoration: none;
 	}
 }
