--- a/app/views/class_posts/show.html.erb
+++ b/app/views/class_posts/show.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div>
     <p class="class_posts_show_border_p">写真</p>
-    <div id="class_posts_show_images">
+    <div id="class_posts_show_images" class="slider">
       <%= image_tag @class_post.image_1.url %>
       <%= image_tag @class_post.image_2.url %>
       <%= image_tag @class_post.image_3.url %>
