送信するの文字色
スマホ側だけ勝手にcss適用されていたため

--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -42,6 +42,7 @@
 			background-color: #fce38a;
 			border: solid 3px #fdd955;
 			border-radius: 5px;
+			color: #333333;
 			appearance: none;
 		}
 	}
