--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -43,8 +43,8 @@
 			border: solid 3px #fdd955;
 			border-radius: 5px;
 			color: #333333;
-			appearance: none;
-			-webkit-appearance: none;
+			-webkit-text-fill-color: red;
+			opacity: 1;
 		}
 	}
 }
