スマホ対応
inpuボタン

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,11 @@ body {
 	color: #333333;
 }
 
+input[type="submit"] {
+	appearance: none;
+	-webkit-appearance: none;
+}
+
 // ------------------------ h1装飾 -------------------------------------
 h1 {
 	text-align: center;
