--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -42,9 +42,7 @@
 			background-color: #fce38a;
 			border: solid 3px #fdd955;
 			border-radius: 5px;
-			color: #333333;
-			-webkit-text-fill-color: red;
-			opacity: 1;
+			color: palevioletred;
 		}
 	}
 }
