--- a/app/assets/stylesheets/stampings.scss
+++ b/app/assets/stylesheets/stampings.scss
@@ -126,9 +126,7 @@
 		background-color: #fce38a;
 		border: solid 3px #fdd955;
 		border-radius: 5px;
-		color: #333333;
-		-webkit-appearance: none;
-		appearance: none;
+		color: red;
 	}
 }
 
