文字色をつける

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,11 +24,9 @@ body {
 	color: #333333;
 }
 
-input[type="submit"] {
-	appearance: none;
+input {
 	-webkit-appearance: none;
 }
-
 // ------------------------ h1装飾 -------------------------------------
 h1 {
 	text-align: center;
