-webkit-appearance: none;　スマホ対応

--- a/app/assets/stylesheets/parents_notes.scss
+++ b/app/assets/stylesheets/parents_notes.scss
@@ -343,7 +343,7 @@
 		background-color: #fce38a;
 		border: solid 3px #fdd955;
 		border-radius: 5px;
-		appearance: none;
+		-webkit-appearance: none;
 	}
 }
 
