--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -42,7 +42,7 @@
 			background-color: #fce38a;
 			border: solid 3px #fdd955;
 			border-radius: 5px;
-			color: palevioletred;
+			-webkit-appearance: none;
 		}
 	}
 }
