公開する前の最終確認　css修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,8 @@ h1 {
 
 // ------------------ フッターリンク ---------------------
 footer {
+	position: absolute;
+	bottom: 0;
 	a {
 		text-decoration: none;
 	}
